--- a/a/build.xml
+++ b/a/build.xml
@@ -69,7 +69,7 @@
             username="${prod.username}"
             keyfile="${prod.keyfile}"
                 trust="true"
-                command="/usr/pgms/payara6.2023.1/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf undeploy tm2batch2"/>
+                command="/usr/pgms/payara6.2023.1/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf undeploy tm2batch2-1.0"/>
 		<sshexec host="${imo.hravatar.com}"
             username="${prod.username}"
             keyfile="${prod.keyfile}"
