2023CR282	3/2/2023	MikeR	Feature	Create an RC Referral Batch Report

--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -546,9 +546,11 @@ exrpt.Rating2=Rating 2
 exrpt.Rating3=Rating 3
 exrpt.RatingId=Rating Id
 
-exrpt.RcCheckReferrals=Reference Check Referrals
+exrpt.RcCheckReferrals=Reference Check Rater Referrals
 exrpt.RcChecks=Reference Checks
 exrpt.RcChecksForC=Prepared for:
+
+exrpt.FromRcChecksForAdminUserOnly=Includes referrals for your Reference Checks only.
 
 
 exrpt.Battery=Associated Test Battery
@@ -723,6 +725,8 @@ g.ScoreCatInterpYellowGreenKnldg=Should achieve above average job performance wi
 g.ScoreCatInterpYellowKnldg=Appears capable of average job performance will little or no training in this area.
 
 g.ScoredSurvey=Scored Survey
+g.Self=Self
+
 g.SystemError=A system error has occurred that has prevented this action. The error message is: {0}
 
 g.StdLiveVideoReport.content=<p>Dear {0},</p><p>Your Live Video Interview Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
@@ -1081,6 +1085,11 @@ rccdt.everyrating=Send when each rater completes their reference.
 rccmt.email=Email
 rccmt.phone=Phone
 rccmt.both=Both Phone and Email
+
+rcrfst.new=New
+rcrfst.pursue=Pursue Now
+rcrfst.save=Save for Later
+rcrfst.archived=Archived
 
 
 rccst.created=Created
