2023CR783	9/8/2023	MikeR	Feature	Add an automated report of Test Keys that have not been started or completed.

--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -524,6 +524,7 @@ exrpt.DateRange=Dates Covered
 exrpt.Department=Department
 exrpt.DetailViewURL=Detail View URL
 exrpt.Email=Email
+exrpt.Expires=Expires
 exrpt.FirstName=First Name
 exrpt.Identifier=Identifier
 exrpt.LastName=Last Name
@@ -554,12 +555,24 @@ exrpt.FromRcChecksForAdminUserOnly=Includes referrals for your Reference Checks 
 
 
 exrpt.Battery=Associated Test Battery
+exrpt.Created=Created
+exrpt.EmailOpened=Email Opened
+exrpt.EmailFirstOpened=Email First Opened
+exrpt.LastAccessed=Last Accessed
+exrpt.LastEmail=Last Email
+exrpt.LastText=Last Text Message
+exrpt.PercentComplete=Percent Complete
 exrpt.ResponseRatings=Test Event Response Ratings
 exrpt.Started=Started
+exrpt.StartUrl=Start URL
 exrpt.Test=Test
 exrpt.TestAdminUserName=Test Administrator
 exrpt.TestResults=Test Results
 exrpt.TestResultsForC=Test Results for:
+
+exrpt.TestKeys=Unfinished Test Keys
+exrpt.TestKeysForC=Unfinished Test Keys for:
+
 exrpt.TestTakerIdentifier=Test Taker Identifier
 exrpt.TestorBattery=Test or Battery
 exrpt.Type=Type
@@ -701,6 +714,8 @@ g.LVScript=Interview Script
 
 g.MediumRisk=Medium Risk
 
+g.No=No
+
 g.PartiallyCorrect=Partially Correct
 g.PassThru={0}
 g.PctEstZ=estimated
@@ -751,11 +766,17 @@ g.StdResultReport.content=<p>Dear {0},</p><p>Your Result Report is attached.</p>
 g.StdResultReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
 g.StdResultReport.subject=HR Avatar Result Report
 
+g.StdUnfinishedTestKeyReport.content=<p>Dear {0},</p><p>Your Unfinished Test Key is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
+g.StdUnfinishedTestKeyReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
+g.StdUnfinishedTestKeyReport.subject=HR Avatar Unfinished Test Key Report
+
+
 g.SystemErrorUnk=Unknown system error.
 
 g.TestTakerPerfNameDefaultX=Performance Value {0}
 g.TooManyFailedLogonAttempts=Sign in attempts have been temporarily disabled. Please wait 30 minutes and try again. If you continue to have difficulty, please contact us.
 
+g.Yes=Yes
 g.YouAreNotAuthorizedForAction=You are not authorized.
 
 
@@ -813,7 +834,7 @@ indust.telecom=Telecommunications
 indust.transporationandlogistics=Transportation & Logistics
 indust.travel=Travel
 it_IT=Italiano
-iw_IL=\u05e2\u05d1\u05e8\u05d9\u05ea (Hebrew)
+he_IL=\u05e2\u05d1\u05e8\u05d9\u05ea (Hebrew)
 ja_JP=\u65e5\u672c\u8a9e (Japanese)
 jobtype.freelance=Freelance
 jobtype.fulltime=Full-Time
@@ -842,7 +863,7 @@ localeStr.in=bahasa Indonesia (ID)
 localeStr.in_ID=bahasa Indonesia (ID)
 localeStr.it=Italiano
 localeStr.it_IT=Italiano
-localeStr.iw_IL=\u05e2\u05d1\u05e8\u05d9\u05ea
+localeStr.he_IL=\u05e2\u05d1\u05e8\u05d9\u05ea
 localeStr.ja=\u65e5\u672c\u8a9e
 localeStr.ja_JP=\u65e5\u672c\u8a9e
 localeStr.ko=Korean
