2024CR61	1/25/2024	MikeR	Bug	When Excel download is done with Credits selected for Candidate Credits, it should show the credit id and credit index numbers so you can track exact credit usage. Same for Test Keys and Reference Checks.

--- a/a/build.xml
+++ b/a/build.xml
@@ -69,12 +69,12 @@
             username="${prod.username}"
             keyfile="${prod.keyfile}"
                 trust="true"
-                command="/usr/pgms/payara6.2023.8/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf undeploy tm2batch2-1.0"/>
+                command="/usr/pgms/payara6.2023.9/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf undeploy tm2batch2-1.0"/>
 		<sshexec host="${imo.hravatar.com}"
             username="${prod.username}"
             keyfile="${prod.keyfile}"
 			      trust="true"
-			      command="/usr/pgms/payara6.2023.8/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf deploy --virtualservers server --contextroot td --force=true --deploymentorder 150 ${prod.bu.dir}/${today.date}${today.month}${today.year}/tm2batch2-1.0.war"/>
+			      command="/usr/pgms/payara6.2023.9/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf deploy --virtualservers server --contextroot td --force=true --deploymentorder 150 ${prod.bu.dir}/${today.date}${today.month}${today.year}/tm2batch2-1.0.war"/>
 			<antcall target="datetime" />
 	</target>
 
@@ -94,9 +94,26 @@
             username="${prod.username}"
             keyfile="${prod.keyfile}"
 			      trust="true"
-			      command="/usr/pgms/payara6.2023.8/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf deploy --virtualservers server --contextroot td --force=true --deploymentorder 150 ${prod.bu.dir}/${today.date}${today.month}${today.year}/tm2batch2-1.0.war"/>
+			      command="/usr/pgms/payara6.2023.9/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf deploy --virtualservers server --contextroot td --force=true --deploymentorder 150 ${prod.bu.dir}/${today.date}${today.month}${today.year}/tm2batch2-1.0.war"/>
 			<antcall target="datetime" />
 	</target>
+
+	<target name="copystaticfilesfordeploy">
+
+      <delete dir="${basedir}/deploytemp/webmod" />
+      
+     <mkdir dir="${basedir}/deploytemp/webmod" />
+        
+	     <copy todir="${basedir}/deploytemp/webmod">
+			<fileset dir="${basedir}/src/main/webapp">
+			</fileset>
+	    </copy>
+                                                	    
+            <echo message="Copied static files locally" />
+            <antcall target="datetime" />
+	</target>
+
+
 
 
 	<target name="scpstaticfiles">
@@ -151,12 +168,12 @@
             username="${prod.username}"
             keyfile="${prod.keyfile}"
                 trust="true"
-                command="/usr/pgms/payara6.2023.8/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf undeploy tm2batch2"/>
+                command="/usr/pgms/payara6.2023.9/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf undeploy tm2batch2"/>
 		<sshexec host="stage.hravatar.com"
             username="${prod.username}"
             keyfile="${prod.keyfile}"
 			      trust="true"
-			      command="/usr/pgms/payara6.2023.8/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf deploy --virtualservers server --contextroot td --force=true --deploymentorder 150 ${prod.bu.dir}/${today.date}${today.month}${today.year}/tm2batch2-1.0.war"/>
+			      command="/usr/pgms/payara6.2023.9/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf deploy --virtualservers server --contextroot td --force=true --deploymentorder 150 ${prod.bu.dir}/${today.date}${today.month}${today.year}/tm2batch2-1.0.war"/>
 			<antcall target="datetime" />
 	</target>
 
@@ -175,7 +192,7 @@
             username="${prod.username}"
             keyfile="${prod.keyfile}"
 			      trust="true"
-			      command="/usr/pgms/payara6.2023.8/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf deploy --virtualservers server --contextroot td --force=true --deploymentorder 150 ${prod.bu.dir}/${today.date}${today.month}${today.year}/tm2batch2-1.0.war"/>
+			      command="/usr/pgms/payara6.2023.9/payara6/glassfish/bin/asadmin --user admin --passwordfile /home/payara/passwd.gf deploy --virtualservers server --contextroot td --force=true --deploymentorder 150 ${prod.bu.dir}/${today.date}${today.month}${today.year}/tm2batch2-1.0.war"/>
 			<antcall target="datetime" />
 	</target>
 
