2024CR103	2/3/2024	MikeR	feature	Implement batch report for Uminn

--- a/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
+++ b/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
@@ -4,14 +4,29 @@
 ####  KEYS FROM REPORT MOCKUP - in Report Order
 ######################################################################################################################################
 
+g.All=All
+g.AllDims=All Dimensions
+g.AllGroups=All Groups
+g.Benchmark=Benchmark Score (See Note)
+b.Click2Visit=Click here to visit this resource
 g.Univ=University of Minnesota
-
 
 g.driven=Driven to Discover
 
+g.Dimension=Dimension
+g.Female=Female
+g.Group=Group
+g.GroupItemScores=Group-Specific Item Scores
+g.headerreporttitle=Organizational Justice Feedback Report
+g.Male=Male
+g.MemberItems=Member Item Scores
+g.NonUrim=Non-URiM
+g.PreparationNotes=Report Preparation Notes
 g.PreparedForC=Prepared for:
+g.Urim=URiM
+g.YourScore=Your Score
 
-title=Professionalism and Interpersonal Skill Self-Development Exercise
+title=Organizational Justice Measure for Learners
 
 reportname=Feedback Report
 url=www.gme.umn.edu
@@ -19,5 +34,176 @@ url=www.gme.umn.edu
 twitter=twitter.com/UMNGME
 
 g.copyrightforreport=Copyright {0}, University of Minnesota, All Rights Reserved.
-g.copyrightforreport.altus=Copyright {0}, Altus Assessments, All Rights Reserved.
 
+contents.title=Table of Contents
+
+contents.1=Introduction
+contents.2=Organizational Justice Models
+contents.3=Feedback Report Overview
+contents.4=Feedback Provided
+contents.5=Overall Summary: Strengths and Opportunities
+contents.6=Overall Scores
+contents.7=Dimension-Level Scores
+contents.8=Group-Level and Individual Item Scores
+
+contents.1.p=2
+contents.2.p=2
+contents.3.p=3
+contents.4.p=3
+contents.5.p=5
+contents.6.p=6
+contents.7.p=7
+contents.8.p=9
+
+prepnotes.1=This is a sample prep note.
+prepnotes.2=This is another sample prep note.
+prepnotes.hrause=Uminn Use Only: oid={0}
+
+
+
+
+
+
+intro.title=INTRODUCTION
+
+intro.p1=During their interactions in the clinical learning environment, learners are subject to decisions about how they are treated, evaluated, and recognized that profoundly affect their workplace experience. 
+intro.p2=Inevitably, learners form opinions about how \u201cfair,\u201d \u201cequitable,\u201d or \u201cjust\u201d these decisions are. These opinions, if negative, widespread, and unchecked, can create unhealthy clinical learning environments (CLEs) with multiple downstream individual and healthcare system effects.
+intro.p3=Individual effects include decreased trainee empathy, wellbeing, and resilience, and increased substance abuse, cynicism, and burnout. Healthcare system effects include impaired decision making and communication, increased adverse events and errors, increased attrition, and lower patient satisfaction. 
+intro.p4=Due to these consequences, it is critical to develop a framework for understanding learner perceptions of justice in CLEs and a means for tracking them.
+intro.p5=Organizational justice models provide a framework for doing so.
+
+ojm.title=ORGANIZATIONAL JUSTICE MODELS 
+ojm.p1=The domains of organizational justice include interpersonal, informational, procedural, and distributive justice. 
+ojm.b1.b=Interpersonal Justice
+ojm.b1.p=refers to equal treatment with dignity and respect. 
+ojm.b2.b=Informational Justice
+ojm.b2.p=involves sharing relevant information with all learners.
+ojm.b3.b=Procedural Justice
+ojm.b3.p=considers the fairness and consistency of procedures and policies (for example, equitable scheduling). 
+ojm.b4.b=Distributive Justice
+ojm.b4.p=refers to the fair allocation of outcomes, such as recognition for effort and performance.
+ojm.p2=These dimensions are shown below in Figure 1.
+ojm.p3=FIGURE 1
+ojm.p4=As Figure 1 illustrates, each justice dimension is aligned with key behaviors. These behaviors are described later in this report.
+ojm.p5=Measures of justice have been developed for many workplaces using the model outlined above, and research in business demonstrates that, across job types, these domains are predictive of job satisfaction, organizational commitment, trust, performance, and withdrawal.
+ojm.p6=We validated a modified model for medical learners by gathering multiple lines of validation evidence regarding test content, internal structure, and relationships with similar and dissimilar constructs.
+
+ovw.title=FEEDBACK REPORT OVERVIEW
+ovw.p1=This report is intended to provide feedback about how learners perceive the fairness of their treatment in their learning environments. 
+ovw.p2.a=Learners in your program/hospital/institution provided feedback for the four justice dimensions, for
+ovw.p2.b=seven key clinical groups
+ovw.p2.c=(Figure 2):
+ovw.b.1=Clinical Supervisors
+ovw.b.2=Program Leaders
+ovw.b.3=Interprofessional Team Members
+ovw.b.4=Operations Staff
+ovw.b.5=Consultants
+ovw.b.6=Colleagues
+ovw.b.7=Patients/Family
+ovw.p3=FIGURE 2
+
+fp.title=FEEDBACK PROVIDED
+fp.p1.a=Two types of feedback are provided. The
+fp.p1.b=first
+fp.p1.c=source of feedback is scores for the (1) overall justice measure, (2) four justice dimensions, and (3) seven clinical groups.  
+fp.p2.a=The
+fp.p2.b=second
+fp.p2.c=source of feedback is item-level comparisons of learners\u2019 perceptions for each dimension and group. Comparisons for male/female learners and URiM/non-URiM learners are included in these breakouts.
+fp.p3=Depending on whether you are a program, institution, or hospital, the feedback may have different implications in terms of your strategy for addressing perceived inequities. The type of feedback received by each group is displayed in Figure 3.
+fp.p4=FIGURE 3
+
+scr.title=SCORING
+scr.p1.a=Learners rated \u201chow frequently\u201d group members displayed behaviors 
+scr.p1.b=during the past year
+scr.p1.c=on a five-point scale (1 = almost never; 5 = almost always). Only behaviors relevant to each group were rated for that group (see Supplementary Materials).
+scr.p2.a=OVERALL MEASURE SCORE =
+scr.p2.b=the mean (i.e., average) frequency rating of the items relevant for each clinical group, across justice dimensions.
+scr.p3.a=JUSTICE DIMENSION SCORES =
+scr.p3.b=the mean frequency rating of the set of items in that dimension that were judged to be relevant across clinical groups.
+scr.p4.a=GROUP SCORES =
+scr.p4.b=the mean frequency rating of the items judged to be relevant for that clinical group, across dimensions.
+
+
+sum.title=OVERALL SUMMARY
+
+sum.p0.dates=The date range covered by this report is {0} thru {1}.
+sum.p0.trimmed=There were {3} total responses collected during the reporting period. However, {2} participants responded more than once. Only the most recent responses for these participated has been incorporated into the report and the total number of unique participants is {4}. 
+sum.p0.all=There were {3} total responses collected during the reporting period, and all responses appear to be from unique participants. 
+
+sum.p1=The charts below provide scores for the (1) overall justice measure, (2) four justice dimensions, and (3) seven clinical groups AND item-level comparisons of learners\u2019 perceptions for each dimension and group.
+
+
+
+str.title=STRENGTHS
+str.p1=Learners'' perceptions were most favorable for the {0} dimension and {1} group. The justice dimension-clinical group combination for which learners had the most favorable perceptions was the {2}-dimension-{3} clinical group combination.
+str.p2=Relative to other justice dimensions and groups, these areas are relative strengths within your program, institution, or CLE.
+
+
+opp.title=OPPORTUNITIES 
+opp.p1=Learners had the least favorable perceptions for the {0} dimension and {1} group. The justice dimension-clinical group combination for which learners had the least favorable perceptions was the {2}-dimension-{3} clinical group combination.
+opp.p2=Relative to other justice dimensions and groups, these areas represent opportunities within your program, institution, or CLE.
+
+brk.title=MALE/FEMALE AND URIM/NON-URIM BREAKDOWNS
+
+brk.p0=Participants break down as follows:
+brk.p0.total=Total
+brk.p0.female=Female
+brk.p0.male=Male
+brk.p0.urim=URiM
+brk.p0.nonurim=Non-URiM
+
+
+brk.p1=Female learners scored lower than male learners on the {0} justice dimension(s) and for the {1} clinical group(s).
+brk.p2=URiM learners scored lower than Non-URiM learners on the {0} justice dimension(s) and for the {1} clinical group(s).
+brk.p3=Based on these results, it will be important to consider which interventions may be relevant to address these groups\u2019 concerns.
+
+ovrs.title=OVERALL SCORES
+ovrs.p1=This table presents your OVERALL scores for the justice measure, each justice dimension, and each clinical group. 
+
+item.title=ITEM-LEVEL SCORES
+item.1=Treated me with kindness and consideration.
+item.2=Listened to me (e.g., was open to hearing concerns raised).
+item.3=Addressed me in a respectful manner and appropriate tone
+item.4=Signaled that I am respected member of a team or program
+item.5=Offered adequate justification for decisions
+item.6=Offered explanations that made sense
+item.7=Offered explanations that were clear
+item.8=Communicated in a timely manner
+item.9=Applies policies and procedures that upheld ethical and moral standards
+item.10=Applied policies and procedures without bias
+item.11=Applied policies and procedures consistently over time, adapting them when necessary as circumstances changed
+item.12=Applied policies and procedures based upon accurate information
+item.13=Ensured that my effort and demonstration of merit were recognized appropriately (e.g., in evaluations)
+item.14=Recognized me fairly considering the responsibilities (e.g., in evaluations)
+item.15=Tried to alleviate the underlying conditions causing stress and strain in my job
+item.16=Tailored communications to my needs
+
+
+rsc.title=RESOURCES
+rsc.1.t=Anti-Racism Education Collection
+rsc.1.u=https://www.mededportal.org/anti-racism
+rsc.2.t=Diversity, Equity, and Inclusion Collection
+rsc.2.u=https://www.mededportal.org/dei
+rsc.3.t=Unconscious Bias Resources for Health Professionals
+rsc.3.u=https://www.aamc.org/about-us/equity-diversity-inclusion/unconscious-bias-training
+rsc.4.t=Addressing Patient Mistreatment: ERAS-ing Patient Mistreatment of Trainees: Faculty Workshop
+rsc.4.u=https://www.mededportal.org/doi/10.15766/mep_2374-8265.10865
+rsc.5.t=Case studies for Recognizing Appropriate and Inappropriate Behaviors in the Clinical Learning Environment 
+rsc.5.u=https://www.mededportal.org/doi/10.15766/mep_2374-8265.10638
+rsc.6.t=Taking the VITALS to Interrupt Microagressions
+rsc.6.u=https://www.mededportal.org/doi/10.15766/mep_2374-8265.11202
+rsc.7.t=Example of Mistreatment Policy
+rsc.7.u=https://med.umn.edu/sites/med.umn.edu/files/osa.0819.005.1_student_mistreatment.pdf
+
+
+bnch.overall.title=Overall Justice Score Comparison Matrix
+bnch.overall.p1=This table allows you to look at the overall differences between males and females, and URiM and non-URiM students, and to compare each of these to our benchmarks.
+bnch.overall.p2=Note: The benchmark values are from a pilot study conducted at the University of Minnesota - Twin Cities in which in which 156 medical residents and fellows rated how frequently members of each clinical group had displayed behaviors during the past year.
+
+bnch.dimension.title=Justice Dimension Score Comparison Matrix
+bnch.dimension.p1=The following tables allows you to look at the differences between males and females, and URiM and non-URiM students for each justice dimension, and to compare these scores to our benchmarks.
+
+bnch.group.title=Clinical Group Score Comparison Matrix
+bnch.group.p1=The following tables allows you to look at the differences between males and females, and URiM and non-URiM students for each clinical group, and to compare these scores to our benchmarks (where available).
+
+bnch.group.title.2=Clinical Group Score Comparison Matrix (Continued)
