--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -641,6 +641,7 @@ g.None=None
 g.NoSuborgAssigned=No Group Assigned
 
 g.Org=Organization
+g.PageX=Page {0}
 g.RcDbCreates=Checks Created
 g.RcDbCCompletes=Checks Completed
 g.RcDbCandStarts=Candidate Starts
