2024CR264	3/14/2024	MikeR	Bug	Org Justice report Revisions

--- a/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
+++ b/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
@@ -21,6 +21,7 @@ g.headerreporttitle=Organizational Justice Feedback Report
 g.Male=Male
 g.MemberItems=Member Item Scores
 g.NonUrim=Non-URiM
+g.OverallJusticeScore=Overall Justice Score
 g.PreparationNotes=Report Preparation Notes
 g.PreparedForC=Prepared for:
 g.Urim=URiM
@@ -38,7 +39,7 @@ g.copyrightforreport=Copyright {0}, University of Minnesota, All Rights Reserved
 contents.title=Table of Contents
 
 contents.1=Introduction
-contents.2=Organizational Justice Models
+contents.2=Organizational Justice Model
 contents.3=Feedback Report Overview
 contents.4=Feedback Provided
 contents.5=Overall Summary: Strengths and Opportunities
@@ -72,21 +73,21 @@ intro.p3=Individual effects include decreased trainee empathy, wellbeing, and re
 intro.p4=Due to these consequences, it is critical to develop a framework for understanding learner perceptions of justice in CLEs and a means for tracking them.
 intro.p5=Organizational justice models provide a framework for doing so.
 
-ojm.title=ORGANIZATIONAL JUSTICE MODELS 
-ojm.p1=The domains of organizational justice include interpersonal, informational, procedural, and distributive justice. 
+ojm.title=ORGANIZATIONAL JUSTICE MODEL
+ojm.p1=Our organizational justice model includes four separate interpersonal, informational, procedural, and distributive justice dimensions. 
 ojm.b1.b=Interpersonal Justice
 ojm.b1.p=refers to equal treatment with dignity and respect. 
 ojm.b2.b=Informational Justice
-ojm.b2.p=involves sharing relevant information with all learners.
+ojm.b2.p=refers to sharing relevant information with all learners.
 ojm.b3.b=Procedural Justice
-ojm.b3.p=considers the fairness and consistency of procedures and policies (for example, equitable scheduling). 
+ojm.b3.p=refers to the fairness and consistency of procedures and policies (for example, equitable scheduling). 
 ojm.b4.b=Distributive Justice
 ojm.b4.p=refers to the fair allocation of outcomes, such as recognition for effort and performance.
 ojm.p2=These dimensions are shown below in Figure 1.
 ojm.p3=FIGURE 1
 ojm.p4=As Figure 1 illustrates, each justice dimension is aligned with key behaviors. These behaviors are described later in this report.
-ojm.p5=Measures of justice have been developed for many workplaces using the model outlined above, and research in business demonstrates that, across job types, these domains are predictive of job satisfaction, organizational commitment, trust, performance, and withdrawal.
-ojm.p6=We validated a modified model for medical learners by gathering multiple lines of validation evidence regarding test content, internal structure, and relationships with similar and dissimilar constructs.
+ojm.p5=Measures of justice have been developed for many workplaces using the model outlined above, and research in business demonstrates that, across job types, these domains are organizational commitment, trust, performance, and withdrawal.
+ojm.p6=Researchers at the University of Minnesota validated a modified model for medical learners by gathering multiple lines of validation evidence regarding test content, internal structure, and relationships with similar and dissimilar constructs.
 
 ovw.title=FEEDBACK REPORT OVERVIEW
 ovw.p1=This report is intended to provide feedback about how learners perceive the fairness of their treatment in their learning environments. 
@@ -105,15 +106,18 @@ ovw.p3=FIGURE 2
 fp.title=FEEDBACK PROVIDED
 fp.p1.a=Two types of feedback are provided. The
 fp.p1.b=first
-fp.p1.c=source of feedback is scores for the (1) overall justice measure, (2) four justice dimensions, and (3) seven clinical groups.  
+fp.p1.c=source of feedback is scores for the (1) overall justice measure, (2) four justice dimensions, and (3) seven clinical groups. Benchmark scores for every individual who has completed the assessment to date are supplied, and these scores serve as reference points. These benchmark scores are updated annually.
 fp.p2.a=The
 fp.p2.b=second
-fp.p2.c=source of feedback is item-level comparisons of learners\u2019 perceptions for each dimension and group. Comparisons for male/female learners and URiM/non-URiM learners are included in these breakouts.
+fp.p2.c=source of feedback is item-level comparisons of learners' perceptions for each dimension and group. Comparisons for male/female learners and underrepresented in medicine and other health care professions (URiM)/non-URiM learners are included in these breakouts.
+
+fp.p2.p2=For this report, underrepresented in medicine and other healthcare professions (URiM) learners encompass those who indicated ANY of the following: (1) Latinx, African American, Alaska/Hawaii Native, Native American, Mainland Puerto Rican, or Southeast Asian with specified ancestries (e.g., Brunese, Burmese, Cambodian, Timor-Leste, Indonesian, Laotian, Malaysian, Filipino, Singaporean, Thai, Vietnamese) or Hmong, OR (2) grew up in a household with an annual income less than $50,000, OR (3) are the first generation in their family to attend college.
+
 fp.p3=Depending on whether you are a program, institution, or hospital, the feedback may have different implications in terms of your strategy for addressing perceived inequities. The type of feedback received by each group is displayed in Figure 3.
 fp.p4=FIGURE 3
 
 scr.title=SCORING
-scr.p1.a=Learners rated \u201chow frequently\u201d group members displayed behaviors 
+scr.p1.a=Learners rated \u201chow frequently\u201d group members displayed behaviors
 scr.p1.b=during the past year
 scr.p1.c=on a five-point scale (1 = almost never; 5 = almost always). Only behaviors relevant to each group were rated for that group (see Supplementary Materials).
 scr.p2.a=OVERALL MEASURE SCORE =
@@ -121,44 +125,47 @@ scr.p2.b=the mean (i.e., average) frequency rating of the items relevant for eac
 scr.p3.a=JUSTICE DIMENSION SCORES =
 scr.p3.b=the mean frequency rating of the set of items in that dimension that were judged to be relevant across clinical groups.
 scr.p4.a=GROUP SCORES =
-scr.p4.b=the mean frequency rating of the items judged to be relevant for that clinical group, across dimensions.
+scr.p4.b=the mean frequency rating of the items judged to be relevant for that clinical group, across justice dimensions.
 
 
 sum.title=OVERALL SUMMARY
 
-sum.p0.dates=The date range covered by this report is {0} thru {1}.
+sum.p0.dates.p1=The date range covered by this report is
+sum.p0.dates.p2={0} thru {1}
 sum.p0.trimmed=There were {3} total responses collected during the reporting period. However, {2} participants responded more than once. Only the most recent responses for these participated has been incorporated into the report and the total number of unique participants is {4}. 
 sum.p0.all=There were {3} total responses collected during the reporting period, and all responses appear to be from unique participants. 
 
-sum.p1=The charts below provide scores for the (1) overall justice measure, (2) four justice dimensions, and (3) seven clinical groups AND item-level comparisons of learners\u2019 perceptions for each dimension and group.
+sum.p1=The charts below provide scores for the (1) overall justice measure, (2) four justice dimensions, and (3) seven clinical groups AND item-level comparisons of learners' perceptions for each dimension and group.
 
 
 
 str.title=STRENGTHS
-str.p1=Learners'' perceptions were most favorable for the {0} dimension and {1} group. The justice dimension-clinical group combination for which learners had the most favorable perceptions was the {2}-dimension-{3} clinical group combination.
+str.p1=Learners'' perceptions were most favorable for the {0} dimension and {1} group. The justice dimension-clinical group combination for which learners had the most favorable perceptions was the {2}-dimension, as reported by the {3} clinical group.
 str.p2=Relative to other justice dimensions and groups, these areas are relative strengths within your program, institution, or CLE.
 
 
 opp.title=OPPORTUNITIES 
-opp.p1=Learners had the least favorable perceptions for the {0} dimension and {1} group. The justice dimension-clinical group combination for which learners had the least favorable perceptions was the {2}-dimension-{3} clinical group combination.
+opp.p1=Learners had the least favorable perceptions for the {0} dimension and {1} group. The justice dimension-clinical group combination for which learners had the least favorable perceptions was the {2}-dimension, as reported by the {3} clinical group.
 opp.p2=Relative to other justice dimensions and groups, these areas represent opportunities within your program, institution, or CLE.
 
 brk.title=MALE/FEMALE AND URIM/NON-URIM BREAKDOWNS
 
 brk.p0=Participants break down as follows:
-brk.p0.total=Total
 brk.p0.female=Female
 brk.p0.male=Male
 brk.p0.urim=URiM
 brk.p0.nonurim=Non-URiM
+brk.p0.total=Total
+brk.p0.overall=Overall
+brk.p0.count=Count
 
 
 brk.p1=Female learners scored lower than male learners on the {0} justice dimension(s) and for the {1} clinical group(s).
 brk.p2=URiM learners scored lower than Non-URiM learners on the {0} justice dimension(s) and for the {1} clinical group(s).
-brk.p3=Based on these results, it will be important to consider which interventions may be relevant to address these groups\u2019 concerns.
+brk.p3=Based on these results, it will be important to consider which interventions may be relevant to address these groups' concerns.
 
 ovrs.title=OVERALL SCORES
-ovrs.p1=This table presents your OVERALL scores for the justice measure, each justice dimension, and each clinical group. 
+ovrs.p1=This table presents your OVERALL scores for the justice measure, each justice dimension, and each clinical group. These scores represent how often learners observed behaviors on average in the past year. The ratings use a five-point Likert Scale, with 1 meaning "almost never" and 5 meaning "almost always." Please be aware that due to varying item counts across clinical groups (refer to Supplementary Materials), all averages presented are "weighted averages" determined by the number of items rated in each group.
 
 item.title=ITEM-LEVEL SCORES
 item.1=Treated me with kindness and consideration.
@@ -197,13 +204,19 @@ rsc.7.u=https://med.umn.edu/sites/med.umn.edu/files/osa.0819.005.1_student_mistr
 
 
 bnch.overall.title=Overall Justice Score Comparison Matrix
-bnch.overall.p1=This table allows you to look at the overall differences between males and females, and URiM and non-URiM students, and to compare each of these to our benchmarks.
+bnch.overall.p1=This table allows you to view the differences between males and females, and between URiM and non-URiM individuals for each justice dimension, and to compare these scores to our benchmarks.
 bnch.overall.p2=Note: The benchmark values are from a pilot study conducted at the University of Minnesota - Twin Cities in which in which 156 medical residents and fellows rated how frequently members of each clinical group had displayed behaviors during the past year.
 
 bnch.dimension.title=Justice Dimension Score Comparison Matrix
-bnch.dimension.p1=The following tables allows you to look at the differences between males and females, and URiM and non-URiM students for each justice dimension, and to compare these scores to our benchmarks.
+bnch.dimension.p1=The following tables allow you to view the differences between males and females, and between URiM and non-URiM individuals for each justice dimension, and to compare these scores to our benchmarks.
 
 bnch.group.title=Clinical Group Score Comparison Matrix
-bnch.group.p1=The following tables allows you to look at the differences between males and females, and URiM and non-URiM students for each clinical group, and to compare these scores to our benchmarks (where available).
+bnch.group.p1=The following tables allow you to view the differences between males and females, and between URiM and non-URiM individuals for each justice dimension, and to compare these scores to our benchmarks (where available).
 
 bnch.group.title.2=Clinical Group Score Comparison Matrix (Continued)
+
+smats.title=Supplementary Materials
+smats.p1=Items Measuring Justice Dimensions for Each Clinical Group in Clinical Learning Environments in a Study to Develop an Instrument to Measure Medical Trainees' Perceptions of Justice in Clinical Learning Environments, 2019-2023 (see note)
+smats.p2=Note: From a multiyear, multi-institutional, multiphase study to develop a 16-item measure of justice, with 4 dimensions: interpersonal, informational, procedural, and distributive. Blank cells indicate the item did not meet the threshold for relevance in step 1 of phase 2 in which 100 trainees rated the relevance of the items for each of the 7 targeted groups on a 5-point Likert scale (with 1 indicating not relevant and 5 indicating highly relevant) to be included in the group scales. For access to the online measure and feedback report, contact the corresponding author.
+
+sn.scoresnote=Note: Green cells indicate that your program's/institution's/CLE's score is above average compared to the benchmark (i.e., in the top 25%). Yellow cells indicate that your program's/institution's/CLE's score is above average compared to the benchmark (i.e., in the middle 50%). o	Red cells indicate that your program's/institution's/CLE's score is below average compared to the benchmark (i.e., in the bottom 25%)
