2024CR360	4/3/2024	MikeR	Feature	OJ Changes
2024CR360	4/3/2024	MikeR	Feature	OJ Changes - Add Other gender category, fix gender and urim classification

--- a/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
+++ b/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
@@ -21,6 +21,7 @@ g.headerreporttitle=Organizational Justice Feedback Report
 g.Male=Male
 g.MemberItems=Member Item Scores
 g.NonUrim=Non-URiM
+g.Other=Other
 g.OverallJusticeScore=Overall Justice Score
 g.PreparationNotes=Report Preparation Notes
 g.PreparedForC=Prepared for:
@@ -153,6 +154,7 @@ brk.title=MALE/FEMALE AND URIM/NON-URIM BREAKDOWNS
 brk.p0=Participants break down as follows:
 brk.p0.female=Female
 brk.p0.male=Male
+brk.p0.other=Other
 brk.p0.urim=URiM
 brk.p0.nonurim=Non-URiM
 brk.p0.total=Total
