2024CR421	4/21/2024	MikeR	Feature	Uminn OrgJustice Report changes

--- a/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
+++ b/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
@@ -87,7 +87,7 @@ ojm.b4.p=refers to the fair allocation of outcomes, such as recognition for effo
 ojm.p2=These dimensions are shown below in Figure 1.
 ojm.p3=FIGURE 1
 ojm.p4=As Figure 1 illustrates, each justice dimension is aligned with key behaviors. These behaviors are described later in this report.
-ojm.p5=Measures of justice have been developed for many workplaces using the model outlined above, and research in business demonstrates that, across job types, these domains are organizational commitment, trust, performance, and withdrawal.
+ojm.p5=Measures of justice have been developed for many workplaces using the model outlined above, and research in business demonstrates that each justice dimension is uniquely correlated with outcomes including job satisfaction, organizational commitment, trust, and performance.
 ojm.p6=Researchers at the University of Minnesota validated a modified model for medical learners by gathering multiple lines of validation evidence regarding test content, internal structure, and relationships with similar and dissimilar constructs.
 
 ovw.title=FEEDBACK REPORT OVERVIEW
@@ -154,7 +154,7 @@ brk.title=MALE/FEMALE AND URIM/NON-URIM BREAKDOWNS
 brk.p0=Participants break down as follows:
 brk.p0.female=Female
 brk.p0.male=Male
-brk.p0.other=Other
+brk.p0.other=Other Gender
 brk.p0.urim=URiM
 brk.p0.nonurim=Non-URiM
 brk.p0.total=Total
@@ -221,4 +221,5 @@ smats.title=Supplementary Materials
 smats.p1=Items Measuring Justice Dimensions for Each Clinical Group in Clinical Learning Environments in a Study to Develop an Instrument to Measure Medical Trainees' Perceptions of Justice in Clinical Learning Environments, 2019-2023 (see note)
 smats.p2=Note: From a multiyear, multi-institutional, multiphase study to develop a 16-item measure of justice, with 4 dimensions: interpersonal, informational, procedural, and distributive. Blank cells indicate the item did not meet the threshold for relevance in step 1 of phase 2 in which 100 trainees rated the relevance of the items for each of the 7 targeted groups on a 5-point Likert scale (with 1 indicating not relevant and 5 indicating highly relevant) to be included in the group scales. For access to the online measure and feedback report, contact the corresponding author.
 
-sn.scoresnote=Note: Green cells indicate that your program's/institution's/CLE's score is above average compared to the benchmark (i.e., in the top 25%). Yellow cells indicate that your program's/institution's/CLE's score is above average compared to the benchmark (i.e., in the middle 50%). o	Red cells indicate that your program's/institution's/CLE's score is below average compared to the benchmark (i.e., in the bottom 25%)
+#sn.scoresnote=Note: Green cells indicate that your program's/institution's/CLE's score is above average compared to the benchmark (i.e., in the top 25%). Yellow cells indicate that your program's/institution's/CLE's score is above average compared to the benchmark (i.e., in the middle 50%). o	Red cells indicate that your program's/institution's/CLE's score is below average compared to the benchmark (i.e., in the bottom 25%)
+sn.scoresnote=Note: In this table, and ALL tables on additional pages in this report:\n - Green cells signify a score of 4.0 or higher for your program/institution/CLE, indicating frequent observation of behaviors.\n - Yellow cells indicate scores between 3.0 and 4.0 for your program/institution/CLE, indicating occasional rather than frequent observation of behaviors (i.e., more than sometimes but less than frequently).\n - Red cells indicate a score of 3.0 or lower for your program/institution/CLE, indicating infrequent observation of behaviors (i.e., less than sometimes).
