2024CR496	5/7/2024	MikeR	Bug	OrgJustice Report and Survey changes

--- a/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
+++ b/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
@@ -22,6 +22,7 @@ g.Male=Male
 g.MemberItems=Member Item Scores
 g.NonUrim=Non-URiM
 g.Other=Other
+g.OtherGender=Other Gender
 g.OverallJusticeScore=Overall Justice Score
 g.PreparationNotes=Report Preparation Notes
 g.PreparedForC=Prepared for:
@@ -203,7 +204,10 @@ rsc.6.t=Taking the VITALS to Interrupt Microagressions
 rsc.6.u=https://www.mededportal.org/doi/10.15766/mep_2374-8265.11202
 rsc.7.t=Example of Mistreatment Policy
 rsc.7.u=https://med.umn.edu/sites/med.umn.edu/files/osa.0819.005.1_student_mistreatment.pdf
-
+rsc.8.t=AAMC Diversity and Inclusion Toolkit
+rsc.8.u=https://www.aamc.org/professional-development/affinity-groups/cfas/diversity-inclusion-toolkit/resources
+rsc.9.t=Restorative Justice in Academic Medicine Facilitator Training
+rsc.9.u=https://cloud.email.aamc.org/RJAM
 
 bnch.overall.title=Overall Justice Score Comparison Matrix
 bnch.overall.p1=This table allows you to view the differences between males and females, and between URiM and non-URiM individuals for each justice dimension, and to compare these scores to our benchmarks.
