2024CR1009	8/27/2024	MikeR	Bug	Include total testing seconds in Excel Download Report 2024CR997	8/23/2024	MikeR	Feature	OSCE - Create ability to modify the demographics collection for Nationality and Gender only. 2024CR998	8/23/2024	MikeR	Feature	OSCE - Create ability to include gender info in excel result reports. This should be based on an org flag. When activated, the 'Never' info provided in the test system should be disabled.

--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -514,6 +514,14 @@ exptype.4-6yr=4 - 6 Years
 exptype.6-10yr=6 - 10 Years
 exptype.less1=Less Than 1 Year
 exptype.notset=Not set
+
+exrpt.Age=Birth Year
+exrpt.Gender=Gender
+exrpt.Nationality=Nationality
+exrpt.Race=Race
+exrpt.Ethnicity=Ethnicity
+
+
 exrpt.AccountPercentile=Account-Level Percentile
 exrpt.AlternateScoreNameX=Alternate Score {0} Name
 exrpt.AlternateScoreX=Alternate Score {0}
@@ -576,6 +584,7 @@ exrpt.TestKeysForC=Unfinished Test Keys for:
 
 exrpt.TestTakerIdentifier=Test Taker Identifier
 exrpt.TestorBattery=Test or Battery
+exrpt.TotalSeconds=Total Seconds
 exrpt.Type=Type
 exrpt.UserId=User ID
 exrpt.UserNotes=User Notes
@@ -604,6 +613,12 @@ ftt.Simulation=Simulation
 ftt.SkillsKnowledge=Skill/ Knowledge
 
 
+gent.Unknown=Unknown
+gent.Male=Male
+gent.Female=Female
+gent.NonBinary=Non-Binary
+gent.PreferNotToSay=Prefer not to Say
+
 
 g.AIMs=Personality Characteristics (relates to fit with the job/team environment)
 g.AIMsC=Personality Characteristics:
@@ -617,6 +632,7 @@ g.AllTestTakersApprox=Global (Estimated)
 
 g.AverageScore=Average Score
 g.AverageScoreBatt=Avg Battery Score
+g.AverageSeconds=Average Seconds
 g.BatteryCompletions=Battery Completions
 g.BatteryStarts=Battery Starts
 g.BatteryTestKeysCreated=Battery Test Keys Created
