2024CR1211	10/8/2024	MikeR	Feature	Add TestEventResponseRatings to Results Excel Download Report on BATCH

--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -774,6 +774,8 @@ g.OrgJusticeReport.content=<p>Dear {0},</p><p>Your Organizational Justice Feedba
 g.OrgJusticeReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
 g.OrgJusticeReport.subject=Organizational Justice Feedback Report
 
+g.RatingX=Rating {0}
+g.ResultViews=Online Views
 
 g.StdRefCheckReferralsReport.content=<p>Dear {0},</p><p>Your Reference Check Referrals Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
 g.StdRefCheckReferralsReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
