2024CR1284	10/17/2024	none	Feature	Update OrgJustice Norms 2024CR1285	10/17/2024	none	Feature	Update OrgJustice text

--- a/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
+++ b/src/main/resources/com/tm2batch/custom/orgjustice/pdf/uminnjustice.properties
@@ -211,7 +211,7 @@ rsc.9.u=https://cloud.email.aamc.org/RJAM
 
 bnch.overall.title=Overall Justice Score Comparison Matrix
 bnch.overall.p1=This table allows you to view the differences between males and females, and between URiM and non-URiM individuals for each justice dimension, and to compare these scores to our benchmarks.
-bnch.overall.p2=Note: The benchmark values are from a pilot study conducted at the University of Minnesota - Twin Cities in which in which 156 medical residents and fellows rated how frequently members of each clinical group had displayed behaviors during the past year.
+bnch.overall.p2=Note: Benchmark values are from a recent administration of this survey (Spring, 2024) at the University of Minnesota Medical School to 926 medical residents and fellows. These values will be updated annually with all available data nationwide.
 
 bnch.dimension.title=Justice Dimension Score Comparison Matrix
 bnch.dimension.p1=The following tables allow you to view the differences between males and females, and between URiM and non-URiM individuals for each justice dimension, and to compare these scores to our benchmarks.
