--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -642,6 +642,9 @@ g.Completed=Completed
 g.Count=Count
 g.Created=Created
 g.CreditsUsed=Credits Used
+
+g.CustomTitleX=Custom Competency Group {0}
+
 g.DoesNotIncludeTestBatteriesThatIncludeThisTest=Please note that the 'Test Keys Created' value does not include test batteries that include this test within the battery. This means that if this test is administered via a test battery, the Test Keys Created value will be less than the number of test starts.  Also, when reconciling test keys created against test starts or completions, please note that a test key is like a <u>ticket</u> to take a test and can be created in an older period and still result in a test event start/test completion in the report period. Finally, Test Starts refers to tests that were <u>started</u> in the report period and Tests Completed refers to tests <u>completed</u> in the report period. Sometimes a test is started but not completed in a period, or vice versa.
 g.DropoffAccessed=Accessed
 g.DropoffKeysCreated=Authorized
