2025CR30	1/6/2025	MikeR	Bug	Add Suspicious Activity to batch test results report.

--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -572,6 +572,8 @@ exrpt.LastEmail=Last Email
 exrpt.LastText=Last Text Message
 exrpt.PercentComplete=Percent Complete
 exrpt.ResponseRatings=Test Event Response Ratings
+exrpt.SAX=SA: {0}
+exrpt.SAALL=SA (All Types)
 exrpt.Started=Started
 exrpt.StartUrl=Start URL
 exrpt.Test=Test
@@ -1248,35 +1250,37 @@ rrt.RequiredButUseLoginForm=Required, Use Login Form
 rrt.RequiredButUseUserIDForm=Required, Use User ID Form
 rrt.optional=Optional
 ru_RU=\u0440\u0443\u0441\u0441\u043a\u0438\u0439 (Russian)
+
+
 sat.candidatefacenotpresent=Candidate Face Missing in Video
 sat.candidatefacenotpresent.detail=The candidate''s face was missing from the video on {0} occasions.
 sat.facialmismatches=Candidate Face Changes Detected in Video
 sat.facialmismatches.detail=The candidate''s face appears to be different from the person who started the test on {0} occasions.
 sat.focusnew=Regained Focus
-sat.focusnew.detail=The candidate re-focused on the testing window. This indicates they had changed to another window, possibly to consult with a disallowed source of information, communicate with others, or to take a screenshot. Candidates are warned not to change to any other window, browser tab, or application during the test. 
+sat.focusnew.detail=The candidate re-focused on the testing window. This indicates they had changed to another window, possibly to consult with a disallowed source of information, communicate with others, or to take a screenshot. Candidates are warned not to change to any other window, browser tab, or application during the test.
 sat.focusout=Loss of Focus
-sat.focusout.detail=The candidate changed focus from the testing window to another window on his or her computer. This could have been to consult with a disallowed source of information, communicate with others, or to take a screenshot. Candidates are warned not to change to any other window, browser tab, or application during the test. 
+sat.focusout.detail=The candidate changed focus from the testing window to another window on his or her computer. This could have been to consult with a disallowed source of information, communicate with others, or to take a screenshot. Candidates are warned not to change to any other window, browser tab, or application during the test.
 sat.focusrepeat=Consecutive Focus
-sat.focusrepeat.detail=The candidate re-focused on the testing window. This indicates they had changed to another window, possibly to consult with a disallowed source of information, communicate with others, or to take a screenshot. Candidates are warned not to change to any other window, browser tab, or application during the test. 
+sat.focusrepeat.detail=The candidate re-focused on the testing window. This indicates they had changed to another window, possibly to consult with a disallowed source of information, communicate with others, or to take a screenshot. Candidates are warned not to change to any other window, browser tab, or application during the test.
 sat.idfacematchfail=Candidate - ID Card Mismatch.
 sat.idfacematchfail.detail=Candidate face captured by camera did not match ID Card face.
 sat.idfacematchlow=Candidate - ID Card  weak match.
 sat.idfacematchlow.detail=Candidate face match captured by camera with ID Card had low confidence.
 sat.keypress=Suspicious Key Press
 sat.keypress.detail=A suspicious was pressed. This can indicate that a screenshot was taken. However, it can also indicate that the candidate is attempting to use a hot key associated with their web browser or operating system. Candidates are warned not to use any hot keys.
+sat.s2toraipaste=Apparent use of AI or Speech-2-Text
+sat.s2toraipaste.detail=There was an apparent use of Artificial Intelligence or Speech-to-Text when populating a text box (such as an essay or fill blank question) where cut and paste is disabled.
 sat.none.detail=There is no known suspicious activity associated with this record.
 sat.freqnegativepitch=Frequent Downward Looks
 sat.freqnegativepitch.detail=The candidate was looking downward - away from his or her computer screen - by an average of {0} degrees. This could indicate he or she is looking at unauthorized notes or taking unauthorized photos of the test questions.
-
 sat.freqyaw=Frequent Side-to-Side Looks
 sat.freqyaw.detail=The candidate was looking to the side - away from his or her computer screen -  by an average of {0} degrees. This could indicate he or she is looking at unauthorized notes or other indicators.
-
 sat.highpitch=Looking Down
 sat.highpitch.detail=The candidate was observed looking down - away from the screen on {0} occasions, by as much as {1} degrees. This could indicate he or she is looking at unauthorized notes or other indicators.
 sat.highyaw=Looking Away (Side/Side)
 sat.highyaw.detail=The candidate was observed looking away from the screen (to the side) on {0} occasions, by as much as {1} degrees. This could indicate he or she is looking at unauthorized notes or other indicators.
-
-
+sat.mobile=Alternate Mobile Device Detected
+sat.mobile.detail=An additional hand-held mobile electronic device, such as a mobile phone, was detected on {0} occasions.
 sat.multiplefaces=Multiple Faces Detected in Video
 sat.multiplefaces.detail=Multiple faces were detected on {0} occasions.
 sat.none=None or Unknown
@@ -1285,6 +1289,9 @@ sat.usernote=Post-Test Evaluator Note
 sat.sameipsametestevents=Shared IP Address (Same Test)
 sat.sameipsametestevents.detail=Other candidates completed the same test for the same company using the SAME IP address within a 24 hour window. This indicates possible collaboration but could also be caused by candidates taking the test within the same office building or on the same WIFI network.
 sat.sameipsametestevents.detailX=<br />Detected events using the same IP Address ({0}):<br />{1}
+sat.speakingdetected=Speech or Loud Background Noise Detected
+sat.speakingdetected.detail=Unauthorized speaking or a sustained loud background noise was detected on {0} occasions.
+
 
 sctp.AccountingFinanceBanking=Accounting & Finance - Banking
 sctp.AccountingFinanceKnowledge=Accounting & Finance - Accounting Knowledge
