2025CR155	1/30/2025	MikeR	Feature	Create an Credits Usage Dashboard Report that informs about when an account will likely run out of credits.

--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -438,6 +438,19 @@ ctp.Logon=Uses Test-Taker Logons
 ctp.Pin=Uses Test Keys (Video Interviews Also)
 ctp.RefChk=Reference Checks Only
 
+curpt.AvgPerWeekC=Average Credits Consumed Per Week:
+curpt.CreditActivity=Candidate Credit Activity
+curpt.CreditUsage=Credit Usage
+curpt.CreditUsageReportForC=Candidate Credit Usage Report for:
+curpt.TotalRemC=Total Candidate Credits Remaining:
+curpt.Used30C=Credits Use Last 30 Days:
+curpt.Used180C=Credits Use Last 180 Days:
+curpt.Used365C=Credits Use Last Year:
+curpt.WeeksRemainingC=Weeks Remaining:
+
+
+
+
 cut.OrgSetting=Use Default Account Setting
 cut.Unlimited=Unlimited
 da_DK=Danish
@@ -643,10 +656,12 @@ g.CandidateCreditsAccessedNote=** A Candidate Credit provides for unlimited test
 g.Completed=Completed
 g.Count=Count
 g.Created=Created
+g.CreditId=Credit Id
 g.CreditsUsed=Credits Used
 
 g.CustomTitleX=Custom Competency Group {0}
 
+g.Department=Department
 g.DoesNotIncludeTestBatteriesThatIncludeThisTest=Please note that the 'Test Keys Created' value does not include test batteries that include this test within the battery. This means that if this test is administered via a test battery, the Test Keys Created value will be less than the number of test starts.  Also, when reconciling test keys created against test starts or completions, please note that a test key is like a <u>ticket</u> to take a test and can be created in an older period and still result in a test event start/test completion in the report period. Finally, Test Starts refers to tests that were <u>started</u> in the report period and Tests Completed refers to tests <u>completed</u> in the report period. Sometimes a test is started but not completed in a period, or vice versa.
 g.DropoffAccessed=Accessed
 g.DropoffKeysCreated=Authorized
@@ -654,8 +669,11 @@ g.DropoffRate=Completion Rate
 g.DropoffStartedTestEvent=Started Test
 g.DropoffTestCompleted=Completed Test
 g.DropoffTestCompletedBatt=Completed Battery
+g.Email=Email
 g.FullOrganization=Total Org
+g.FirstUsed=First Used
 g.Group=Group
+g.LastUsed=Last Used
 g.LimitedSample=
 g.Name=Name
 g.None=None
@@ -663,6 +681,7 @@ g.NoSuborgAssigned=No Group Assigned
 
 g.Org=Organization
 g.PageX=Page {0}
+g.Phone=Phone
 g.RcDbCreates=Checks Created
 g.RcDbCCompletes=Checks Completed
 g.RcDbCandStarts=Candidate Starts
@@ -791,6 +810,10 @@ g.StdActivityReport.content=<p>Dear {0},</p><p>Your Activity Report is attached.
 g.StdActivityReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p>
 g.StdActivityReport.subject=HR Avatar Activity Report
 
+g.StdCreditUsageReport.content=<p>Dear {0},</p><p>Your Credit Usage Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
+g.StdCreditUsageReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
+g.StdCreditUsageReport.subject=HR Avatar Credit Usage Report
+
 
 g.StdResultReport.content=<p>Dear {0},</p><p>Your Result Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
 g.StdResultReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
@@ -806,6 +829,7 @@ g.SystemErrorUnk=Unknown system error.
 g.TestTakerPerfNameDefaultX=Performance Value {0}
 g.TooManyFailedLogonAttempts=Sign in attempts have been temporarily disabled. Please wait 30 minutes and try again. If you continue to have difficulty, please contact us.
 
+g.UsageEndDate=Usage End Date (UTC)
 g.Yes=Yes
 g.YouAreNotAuthorizedForAction=You are not authorized.
 
