2025CR155	1/30/2025	MikeR	Feature	Create an Credits Usage Dashboard Report that informs about when an account will likely run out of credits.

--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -447,6 +447,7 @@ curpt.Used30C=Credits Use Last 30 Days:
 curpt.Used180C=Credits Use Last 180 Days:
 curpt.Used365C=Credits Use Last Year:
 curpt.WeeksRemainingC=Weeks Remaining:
+curpt.CreditsExpirations=Credit Expiration Dates
 
 
 
@@ -644,6 +645,7 @@ g.AllBatteries=All Batteries
 g.AllTests=All Tests
 g.AllTestTakers=Global
 g.AllTestTakersApprox=Global (Estimated)
+g.Amount=Amount
 
 g.AverageScore=Average Score
 g.AverageScoreBatt=Avg Battery Score
@@ -670,9 +672,11 @@ g.DropoffStartedTestEvent=Started Test
 g.DropoffTestCompleted=Completed Test
 g.DropoffTestCompletedBatt=Completed Battery
 g.Email=Email
+g.ExpirationDate=Expiration Date
 g.FullOrganization=Total Org
 g.FirstUsed=First Used
 g.Group=Group
+g.InitialAmount=Initial Amount
 g.LastUsed=Last Used
 g.LimitedSample=
 g.Name=Name
@@ -689,6 +693,7 @@ g.RcDbCandCompletes=Candidate Completions
 g.RcDbRtrCreates=Rater Creates
 g.RcDbRtrStarts=Rater Starts
 g.RcDbRtrCompletes=Rater Completions
+g.RemainingAmount=Remaining Amount
 
 g.Started=Started
 g.Status=Status
