--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -818,6 +818,7 @@ g.StdActivityReport.subject=HR Avatar Activity Report
 g.StdCreditUsageReport.content=<p>Dear {0},</p><p>Your Credit Usage Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
 g.StdCreditUsageReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
 g.StdCreditUsageReport.subject=HR Avatar Credit Usage Report
+g.StdCreditUsageReport.subject.warning=LOW CREDITS WARNING for HR Avatar
 
 
 g.StdResultReport.content=<p>Dear {0},</p><p>Your Result Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
